[package]
name = "acton-ern"
version = "2.0.0-alpha"
edition = "2021"
authors = ["Govcraft <acton@govcraft.ai>"]
description = "A Rust library for handling Acton Entity Identifiers (EIDs), providing tools for generating, parsing, and managing EIDs within Acton-based solutions."
repository = "https://github.com/govcraft/acton-eid"
documentation = "https://docs.rs/acton-eid"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["eid", "resource-management", "cloud", "actor"]
categories = ["api-bindings", "cryptography", "data-structures", "network-programming", "authentication"]
homepage = "https://govcraft.com/acton-eid"

[dependencies]
derive-new = "0.6.0"
derive_more = "0.99.18"
type-safe-id = { version = "0.3.0", features = ["serde", "arbitrary"] }
thiserror = "1.0.61"
uuid = { version = "1.8.0", features = ["fast-rng", "v4", "v5", "v6", "v7", "v8"] }

[dev-dependencies]
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"
log = "0.4.21"
console-subscriber = "0.2.0"
