[package]
name = "acton-ern"
version = "2.0.0"
edition = "2024"
authors = ["Roland Rodriguez <roland@govcraft.ai>"]
description = "A Rust library for handling Entity Resource Names (ERNs), providing type-safe, hierarchical, and k-sortable resource identifiers for distributed systems and more."
repository = "https://github.com/govcraft/acton-ern"
documentation = "https://docs.rs/acton-ern"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ID", "resource-management", "cloud", "actor", "distributed-systems"]
categories = ["api-bindings", "data-structures", "network-programming", "authentication"]

# Features for optional components
[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"]}
thiserror = "2.0.12"
mti = "1.0.0"
# Optional dependencies
serde = { version = "1.0.197", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"
log = "0.4.21"
console-subscriber = "0.4.0"
criterion = "0.5.1"
serde_json = "1.0.114"
serde_yaml = "0.9.32"
tokio-test = "0.4.3"

